--- a/style.css
+++ b/style.css
@@ -98,10 +98,10 @@ body {
 }
 
 
-.weather-box .box,
+/* .weather-box .box,
 .not-found .box {
     transform: translateY(-100%);
-}
+} */
 
 .weather-box.active .box,
 .not-found.active .box {
@@ -110,10 +110,10 @@ body {
     transition-delay: .6s;
 }
 
-.weather-box .box .info-weather {
+/* .weather-box .box .info-weather {
     transform: translateY(-120%);
 
-}
+} */
 
 .container.active .weather-box .box .info-weather,
 .container.active .weather-details .humidity .info-humidity,
@@ -173,11 +173,11 @@ body {
     transition-delay: 1.2s;
 }
 
-.weather-details .humidity .info-humidity,
+/* .weather-details .humidity .info-humidity,
 .weather-details .wind .info-wind {
     transform: translateY(-100%);
     overflow: hidden;
-}
+} */
 
 
 
